2007-05-04  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gstreamer-support.c (scm_init_gstreamer): Register
	GstMiniObject GValue wrappers.

	* glib-checks.ac: Make sure we have new new guile-gnome-glib-0.

2007-02-02  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gstreamer-support.c (scm_init_gstreamer): Don't set the
	log handler, as there is no more log handler.

2007-01-14  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/gstreamer.defs:
	* gnome/gw/gstreamer-support.h: 
	* gnome/gw/gstreamer-support.c (_wrap_gst_message_get_src)
	(_wrap_gst_message_get_type): Ignore the gst_message_parse_*
	functions. Make wrappers for GST_MESSAGE_TYPE and GST_MESSAGE_SRC,
	as gst-message-get-type and gst-message-get-src.

2006-12-17  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-gstreamer version 0.9.90 ==

2006-12-17  Andy Wingo  <wingo@pobox.com>

	* VERSION: Bumped to 0.9.90.

2006-12-17  Andy Wingo  <wingo@pobox.com>

	* guile-gnome-gstreamer.pc.in (Requires): 
	* guile-gnome-gstreamer-uninstalled.pc.in (Requires): Updates
	platform requirement, but not sure where this gets used.

	* gnome/overrides/Makefile.am (module_DATA): Add the type-ignores
	to the dist.

	* gnome/gstreamer.scm (make): Update for new 0.10 plugin/registry
	API.

	* examples/gstreamer/vorbisplay.scm: Updated for newer API. Works
	with newest guile-gnome from bzr and g-wrap with an extra-special
	patch.

2006-12-15  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gstreamer-support.h
	* gnome/gw/gstreamer-support.c
	(scm_gst_mini_object_primitive_create): New function, used in
	<gst-mini-object>'s initialize method.
	(scm_init_gstreamer): Register miniobject ref/unref functions, and
	do the work that was in initializations-cg.

	* gnome/gw/gstreamer-spec.scm (initializations-cg): Instead of
	putting a lot of C code here, just call scm_init_gstreamer in the
	support file.

	* gnome/gstreamer.scm (initialize): Define the initialize method
	on miniobjects, allowing you to (make <gst-buffer>), which is