@@ -1,3 +1,9 @@
+2007-06-15  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/gstreamer.scm: Remove printouts, as loading is now faster
+	with guile-gnome-platform 2.15.93 and Guile 1.8 CVS. Remove
+	terrible hack involving `link', there seems to be no need.
+
 2007-05-04  Andy Wingo  <wingo@pobox.com>
 
 	* gnome/gw/gstreamer-support.c (scm_init_gstreamer): Register
